@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.glassfish.metro</groupId>
         <artifactId>bundles</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>webservices-extra</artifactId>
@@ -50,20 +50,28 @@
                                     <outputDirectory>${generated.sources.dir}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>javax.security.auth.message</groupId>
-                                    <artifactId>javax.security.auth.message-api</artifactId>
+                                    <groupId>jakarta.security.auth.message</groupId>
+                                    <artifactId>jakarta.security.auth.message-api</artifactId>
                                     <classifier>sources</classifier>
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${generated.sources.dir}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>javax.mail</groupId>
-                                    <artifactId>mail</artifactId>
+                                    <groupId>jakarta.annotation</groupId>
+                                    <artifactId>jakarta.annotation-api</artifactId>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${generated.sources.dir}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.mail</groupId>
+                                    <artifactId>jakarta.mail</artifactId>
                                     <classifier>sources</classifier>
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${generated.sources.dir}</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
+                            <excludes>META-INF/gfprobe-provider.xml,com/sun/grizzly/**,com/sun/org/**,org/**</excludes>
                         </configuration>
                     </execution>
                 </executions>
@@ -98,9 +106,9 @@
                             <artifactSet>
                                 <includes>
                                     <include>com.sun.grizzly:grizzly-framework-http</include>
-                                    <include>javax.security.auth.message:javax.security.auth.message-api</include>
-                                    <include>javax.annotation:javax.annotation-api</include>
-                                    <include>javax.mail:mail</include>
+                                    <include>jakarta.security.auth.message:jakarta.security.auth.message-api</include>
+                                    <include>jakarta.annotation:jakarta.annotation-api</include>
+                                    <include>com.sun.mail:jakarta.mail</include>
                                 </includes>
                             </artifactSet>
                             <filters>
@@ -116,6 +124,7 @@
                             </filters>
                             <createSourcesJar>false</createSourcesJar>
                             <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
@@ -133,54 +142,27 @@
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>release-9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-              <plugins>
-                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <configuration>
-                        <additionalJOptions>
-                            <additionalJOption>--add-modules</additionalJOption>
-                            <additionalJOption>java.activation</additionalJOption>
-                        </additionalJOptions>
-                    </configuration>
-                </plugin>
-              </plugins>
-             </build>
-        </profile>
-    </profiles>
-
     <dependencies>
         <dependency>
             <groupId>com.sun.grizzly</groupId>
             <artifactId>grizzly-framework-http</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.security.auth.message</groupId>
-            <artifactId>javax.security.auth.message-api</artifactId>
+            <groupId>jakarta.security.auth.message</groupId>
+            <artifactId>jakarta.security.auth.message-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
             <scope>provided</scope>
-        </dependency>
-         <dependency>
-            <groupId>javax.xml.soap</groupId>
-            <artifactId>javax.xml.soap-api</artifactId>
         </dependency>
     </dependencies>
     <properties>
